--- a/.github/workflows/update_roles.yml
+++ b/.github/workflows/update_roles.yml
@@ -23,3 +23,8 @@ jobs:
     - name: Run python code
       run: |
         python main.py
+      env:
+          RIOT_API_KEY: ${{ secrets.RIOT_API_KEY }}
+          GUILD_ID: ${{ secrets.GUILD_ID }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          PLAYER_JSON: ${{ secrets.PLAYER_JSON }}
